# mlops_group70

./: .env.docker  .gitignore  AGENTS.md  API_SETUP.md  README.md  coverage_report.txt  docker-compose.yaml  docker-compose.yml  mkdocs.yml  models.dvc  pyproject.toml  tasks.py  test_api.sh
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: deploy_docs.yaml  deploy_to_open.yml  on_data_change.yml  on_model_change.yml  tests.yml
configs/: train.yaml  train_cpu.yaml  train_production.yaml  train_quick.yaml
configs/callbacks/: default.yaml
configs/data/: default.yaml
configs/logger/: csv.yaml  wandb.yaml
configs/model/: default.yaml  quick.yaml
configs/trainer/: cpu.yaml  default.yaml  quick.yaml
data/: processed.dvc  raw.dvc
dockerfiles/: api.dockerfile  train.dockerfile  ui.dockerfile
docs/: README.md  index.md  mkdocs.yaml
docs/api/: api.md  data.md  model.md  ui.md
docs/architecture/: api-ui.md  data-pipeline.md  model.md  overview.md
docs/configuration/: hydra.md  training.md
docs/development/: docker.md  dvc.md  testing.md
docs/getting-started/: installation.md  quickstart.md
docs/source/: index.md
mbti-type-classifier/: README.md  pyproject.toml
mbti-type-classifier/docs/: mkdocs.yaml
notebooks/: 01_model_training.ipynb  02_dataset_clearning.ipynb
outputs/2026-01-17/15-46-22/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-19/16-24-31/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-19/16-26-06/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-19/16-26-53/.hydra/: hydra.yaml
outputs/2026-01-20/22-09-18/.hydra/: config.yaml  hydra.yaml
reports/: README.md  report.html
scripts/: train.py
src/exercises_estela/: train.py
src/mbti_classifier/: __init__.py  api.py  data.py  data1.py  model.py  train.py  ui.py  visualize.py
src/mbti_classifier/api/: README.md  __init__.py  api.py  ui.py
src/mbti_classifier/training/: __init__.py  data.py  model.py  train.py
src/src/: train.py
tests/: conftest.py  test_data.py  test_data_module.py  test_model.py
tests/integration/: test_pipeline.py
tests/unit/: test_api.py  test_data_module.py  test_model.py
wandb/: latest-run
wandb/offline-run-20260119_114051-tx4u8hxe/: run-tx4u8hxe.wandb
wandb/offline-run-20260119_114051-tx4u8hxe/files/: requirements.txt
