[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "mbti_classifier"
version = "0.0.1"
description = "This project implements a multi-class NLP classifier utilizing machine learning to predict one of sixteen Myers-Briggs personality types based on a user\u0027s linguistic patterns and writing style."
authors = [
  { name = ".", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi==0.115.6",
    "mlcroissant>=1.0.22",
    "pandas>=2.3.3",
    "torch==2.6.0",
    "transformers>=4.57.5",
    "typer==0.15.1",
    "uvicorn==0.34.0",
    "scikit-learn>=1.5.0",
    "lightning>=2.6.0",
    "wandb>=0.24.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "hydra-core>=1.3.2",
    "torchmetrics>=1.8.2",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.1.3",
    "mypy==1.19.1",
    "mkdocs-material==9.7.1",
    "mkdocstrings-python==2.0.1",
]






[tool.ruff]
line-length = 120
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
omit = ["tests/*"]
