[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "mbti_classifier"
version = "0.0.1"
description = "This project implements a multi-class NLP classifier utilizing machine learning to predict one of sixteen Myers-Briggs personality types based on a user\u0027s linguistic patterns and writing style."
authors = [
  { name = ".", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
# Core dependencies shared by all environments
dependencies = [
    "pandas>=2.3.3",
    "torch>=2.5.0",
    "transformers>=4.57.5",
    "scikit-learn>=1.5.0",
    "numpy<2.0",
    "pydantic>=2.12.5",
    "loguru>=0.7.3",
    "lightning>=2.6.0",  # Required for loading model checkpoints
    "torchmetrics>=1.8.2",  # Required by model.py
]

[dependency-groups]
# API-specific dependencies
api = [
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
]

# Training-specific dependencies
train = [
    "wandb>=0.24.0",
    "hydra-core>=1.3.2",
    "mlcroissant>=1.0.22",
    "rich>=10.2.2",  # Required by RichProgressBar
]

# UI-specific dependencies
ui = [
    "streamlit>=1.53.0",
    "plotly>=6.5.2",
    "pydantic>=2.12.5",
    "numpy<2.0",
]

# Development dependencies
dev = [
    "click==8.1.7",
    "coverage>=7.6.9",
    "markdown>=3.10",
    "dvc[gs]>=3.66.1",
    "coverage==7.6.9",
    "invoke==2.2.0",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.1.3",
    "mypy==1.19.1",
    "mkdocs-material==9.7.1",
    "mkdocstrings-python==2.0.1",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
]






[tool.ruff]
line-length = 120
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
